GH-28 Replace Java 11 call with Java 8 method for library compatibility